# paddyngton

./: .gitignore  CONTEXT.md  README.md  README_RU.md  TODO.md  book-template.json  build.bat  context-template.json  create_app.py  emoji_report.json  find_emojis.py  fix_closings.py  fix_lib.ps1  index.html  package-lock.json  package.json  paddyngton  playwright.config.js  playwright.config.ts  replace_app_emojis.py  replace_emojis.py  temp_original.tsx  vite.config.ts  vitest.config.ts  write-postcss.cjs  write.js
.github/workflows/: build.yml  main.yml
paddyngton/: .gitignore  README.md  context-template.json  fix_lib.js  package-lock.json  package.json  tsconfig.json  write.ps1  write_lib.cjs
paddyngton/src/: App.tsx  index.css
paddyngton/src-tauri/: Cargo.toml  tauri.conf.json
scripts/: generate-translation-types.ts
src/: App.tsx  i18n.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  models.rs  utils.rs
src-tauri/src/commands/: bear.rs  fs.rs  mod.rs  pdf.rs  snapshot.rs  version.rs  window.rs
src/constants/: formatButtons.ts
src/hooks/: useAutoSave.ts  useBookManager.ts  useEditor.ts  useKeyboardShortcuts.ts  useMindMap.ts  useRecentBooks.ts  useSettings.ts  useVersions.ts  useWindowControls.ts  useWritingStats.ts
src/lib/: bookIO.ts  contextHelpers.ts  formatEditor.ts  markdownRender.ts
src/store/: index.ts  useBookStore.ts  useSettingsStore.ts  useUIStore.ts
src/translations/: en.json  es.json  keys.ts  ru.json
(+56 files in other folders)
