[package]
name="app"
version="0.1.0"
description="Paddyngton - Cross-platform Code Editor"
authors= ["you"]
license="MIT"
edition="2021"
rust-version="1.77.2"

[lib]
name="app_lib"
crate-type= ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build= {version="2.5.6", features = [] }

[dependencies]
serde_json="1.0"
serde= {version="1.0",features= ["derive"] }
log="0.4"
tauri= {version="2.10.3", features = [] }
tauri-plugin-log="2"
tauri-plugin-dialog="2"
tauri-plugin-fs="2"
tauri-plugin-updater="2"
tauri-plugin-shell="2"
tauri-plugin-http="2"
font-kit = "0.14"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
printpdf = "0.7"
chrono = "0.4"
